fixed note save button ie moved it under the text area

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,4 +62,10 @@ footer{
     display: flex;
     justify-content: center;
     width: 100vh;
+    flex-direction: column;
+}
+.Main_button{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
 }
